# Cloudarr

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  cloudarr.k8s.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: __init__.py  main.py  worker_main.py
app/api/: deps.py
app/api/routes/: dashboard.py  health.py  qbittorrent.py
app/core/: config.py  logging.py  security.py
app/db/: base.py  session.py
app/models/: __init__.py  enums.py  job.py  setting.py
app/schemas/: qbittorrent.py
app/services/: health.py  job_service.py  mount_manager.py  runtime.py  settings_store.py  state_machine.py  symlink_manager.py  worker.py
app/services/provider/: base.py  realdebrid.py  torbox.py
app/static/: style.css
app/templates/: base.html  events.html  health.html  jobs.html  login.html  settings.html
cloudarr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
docs/: KUBERNETES_DEPLOYMENT.md  SONARR_COMPATIBILITY.md  TROUBLESHOOTING.md  UBUNTU_INSTALLATION.md
scripts/: deploy_k3s.sh  deploy_update.sh  install_media_stack_ubuntu.sh  install_ubuntu.sh  reset_jobs_and_events.sh  update.sh
systemd/: cloudarr-api.service  cloudarr-worker.service  torbox-rclone-mount.service
tests/: conftest.py  test_magnet_naming.py  test_mount_refresh.py  test_no_copy_paths.py  test_qbittorrent_shim.py  test_realdebrid_provider.py  test_restart_recovery.py  test_state_machine.py  test_symlink_only.py  test_worker_wait_timeout.py
