[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudarr"
version = "0.1.0"
description = "TorBox-backed qBittorrent-compatible bridge for Sonarr"
readme = "README.md"
requires-python = ">=3.12"
authors = [{name = "Cloudarr"}]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "gunicorn>=22.0.0",
  "sqlalchemy>=2.0.35",
  "alembic>=1.13.2",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.2",
  "jinja2>=3.1.4",
  "python-multipart>=0.0.9",
  "httpx>=0.27.2",
  "itsdangerous>=2.2.0",
  "passlib[bcrypt]>=1.7.4",
  "cryptography>=43.0.1",
  "python-json-logger>=2.0.7",
  "orjson>=3.10.7",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.2.1"]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "anyio>=4.4.0",
  "ruff>=0.6.4",
  "mypy>=1.11.2",
]

[project.scripts]
cloudarr-api = "app.main:run"
cloudarr-worker = "app.worker_main:run"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
